--- a/training1/html/index.html
+++ b/training1/html/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head title="Anu's first html page">
   <meta charset="UTF-8">
 
   <link rel="stylesheet" href="styles.css">
