added seperate tag title

--- a/training1/html/index.html
+++ b/training1/html/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head title="Anu's first html page">
+<head >
   <meta charset="UTF-8">
 
   <link rel="stylesheet" href="styles.css">
-
+<title>"Anu's first html page"</title>
   
 </head>
 <body>
