added new in the message

--- a/training1/html/index.html
+++ b/training1/html/index.html
@@ -13,7 +13,7 @@
     <form id="regForm" class="regForm">
 
       <div class="headline">
-        <h1>Register user</h1>
+        <h1>Register new user</h1>
       </div>
 
       <div class="form-content">
